# Rust_VST_Synth

./: Cargo.toml  create_context.py  run-synth.sh
src/: lib.rs  main.rs
src/envelope/: mod.rs
src/filter/: mod.rs
src/oscillator/: basic_oscillator.rs  mod.rs  random_oscillator.rs
src/sound_module/: mod.rs
src/synthesizer/: mod.rs
src/voice/: mod.rs
src/voice_configuration/: mod.rs
